# AVA

./: CMakeLists.txt  README.md  cmake_install.cmake  imgui.ini  output.wav.json
include/: game.hpp  global.hpp
include/util/: debug.hpp  tools.hpp  typedefs.hpp
include/util/managers/: sound_manager.hpp  text_manager.hpp
src/: game.cpp  main.cpp  sound_manager.cpp  text_manager.cpp
tools/: whisper-cli
